// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCard /> by default matches with snapshot 1`] = `
<div
  className="sc-ifAKCX fhNYyh"
>
  <img
    alt=""
    className="sc-bxivhb kTYzCt"
    src="#image"
  />
  <h1
    className="sc-bwzfXH gVLghD"
  >
    Custom title
  </h1>
  
</div>
`;

exports[`<VerticalCard /> with some props matches with snapshot 1`] = `
<div
  className="sc-ifAKCX fhNYyh"
>
  <img
    alt="Image alt"
    className="sc-bxivhb kTYzCt"
    src="#image"
  />
  <h1
    className="sc-bwzfXH gVLghD"
  >
    Custom title
  </h1>
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <p
      className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
    >
      Custom text
    </p>
  </div>
</div>
`;
